impr(bootstrap): update icon classes
basic update of bootstrap classes

replace btn by btn btn-default where needed

remove glyphicon glyphicon-white

change suspended icon css class

--- a/client/webapp/src/main/resources-plugin/base/app/views/dashboard/process-definition-list.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/dashboard/process-definition-list.html
@@ -28,7 +28,7 @@
       </tr>
       <tr ng-if="!statistics">
         <td colspan="3">
-          <i class="icon-loading"></i> loading statistics...
+          <i class="glyphicon glyphicon-loading"></i> loading statistics...
         </td>
       </tr>
       <tr ng-if="statistics && !statistics.length">
