--- a/client/webapp/src/main/resources-plugin/base/app/views/dashboard/process-definition-tiles.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/dashboard/process-definition-tiles.html
@@ -25,7 +25,7 @@
     </a>
 
     <span ng-if="!statistics">
-      <i class="icon-loading"></i> loading deployed processes...
+      <i class="glyphicon glyphicon-loading"></i> loading deployed processes...
     </span>
 
     <span ng-if="statistics && !statistics.length">
