--- a/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/process-instance-table.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/process-instance-table.html
@@ -25,14 +25,14 @@
               ng-show="processInstance.suspended"
               tooltip="Currently suspended"
               tooltip-placement="left">
-          <i class="icon-suspended white"></i>
+          <i class="glyphicon glyphicon-pause white"></i>
         </span>
       </td>
     </tr>
 
     <tr ng-if="!processInstances">
       <td colspan="4">
-        <i class="icon-loading"></i> loading process instances...
+        <i class="glyphicon glyphicon-loading"></i> loading process instances...
       </td>
     </tr>
 
