--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/add-variable-action.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/add-variable-action.html
@@ -1,7 +1,7 @@
 <!-- # CE - src/main/webapp/plugin/base/app/views/processInstnace/add-variable-action.html -->
-<a class="btn btn-toolbar" href ng-click="openDialog()"
+<a class="btn btn-default btn-toolbar" href ng-click="openDialog()"
    tooltip="Add a new variable to Process Instance"
    tooltip-placement="left">
-  <i class="icon-plus"></i>
+  <i class="glyphicon glyphicon-plus"></i>
 </a>
 <!-- / CE - src/main/webapp/plugin/base/app/views/processInstnace/add-variable-action.html -->
