--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/called-process-instance-table.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/called-process-instance-table.html
@@ -1,4 +1,4 @@
-<!-- # CE - src/main/webapp/plugin/base/app/views/processInstnace/called-process-instance-table.html -->
+<!-- # CE - webapp/src/main/webapp/plugin/base/app/views/processInstnace/called-process-instance-table.html -->
 <table class="table table-bordered table-hover table-condensed">
   <thead>
     <th>Called Process Instance</th>
@@ -27,7 +27,7 @@
 
     <tr ng-if="!calledProcessInstances">
       <td colspan="3">
-        <i class="icon-loading"></i> loading called process instances...
+        <i class="glyphicon glyphicon-loading"></i> loading called process instances...
       </td>
     </tr>
 
@@ -39,4 +39,4 @@
 
   </tbody>
 </table>
-<!-- / CE - src/main/webapp/plugin/base/app/views/processInstnace/called-process-instance-table.html -->
+<!-- / CE - webapp/src/main/webapp/plugin/base/app/views/processInstnace/called-process-instance-table.html -->
