--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/cancel-process-instance-dialog.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/cancel-process-instance-dialog.html
@@ -7,7 +7,7 @@
   <div notifications-panel></div>
 
   <div ng-hide="status === 'cancellationSuccess' || status === 'cancellationFailed' || status === 'beforeCancellation' || status === 'loadingFailed'">
-    <i class="icon-loading"></i> loading process instance information...
+    <i class="glyphicon glyphicon-loading"></i> loading process instance information...
   </div>
 
   <div ng-show="status === 'loadingFailed'">
