--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/job-retry-bulk-action.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/job-retry-bulk-action.html
@@ -1,7 +1,7 @@
 <!-- # CE - src/main/webapp/plugin/base/views/processInstance/job-retry-bulk-action.html -->
-<a class="btn btn-toolbar" href ng-click="openDialog()"
+<a class="btn btn-default btn-toolbar" href ng-click="openDialog()"
    tooltip="Increment Number of Retries of Failed Jobs"
    tooltip-placement="left">
-  <i class="icon-repeat"></i>
+  <i class="glyphicon glyphicon-repeat"></i>
 </a>
 <!-- / CE - src/main/webapp/plugin/base/views/processInstance/job-retry-bulk-action.html -->
