--- a/client/webapp/src/main/resources-plugin/jobDefinition/app/views/processDefinition/job-definition-table.html
+++ b/client/webapp/src/main/resources-plugin/jobDefinition/app/views/processDefinition/job-definition-table.html
@@ -40,7 +40,7 @@
 
     <tr ng-if="!jobDefinitions">
       <td colspan="5">
-        <i class="icon-loading"></i> loading job definitions...
+        <i class="glyphicon glyphicon-loading"></i> loading job definitions...
       </td>
     </tr>
 
