--- a/client/webapp/src/main/resources-plugin/jobDefinition/app/views/processDefinition/suspension-state-action.html
+++ b/client/webapp/src/main/resources-plugin/jobDefinition/app/views/processDefinition/suspension-state-action.html
@@ -1,12 +1,12 @@
 <!-- # CE - ui/client/views/processDefinition/suspension-state-action.html -->
-<a class="btn action-button" ng-click="openSuspensionStateDialog(jobDefinition)" ng-show="jobDefinition.suspended"
+<a class="btn btn-default action-button" ng-click="openSuspensionStateDialog(jobDefinition)" ng-show="jobDefinition.suspended"
    tooltip="Activate Job Definition"
    tooltip-placement="left">
-  <i class="icon-play"></i>
+  <i class="glyphicon glyphicon-play"></i>
 </a>
-<a class="btn action-button" ng-click="openSuspensionStateDialog(jobDefinition)" ng-hide="jobDefinition.suspended"
+<a class="btn btn-default action-button" ng-click="openSuspensionStateDialog(jobDefinition)" ng-hide="jobDefinition.suspended"
    tooltip="Suspend Job Definition"
    tooltip-placement="left">
-  <i class="icon-suspended"></i>
+  <i class="glyphicon glyphicon-pause"></i>
 </a>
 <!-- / CE - ui/client/views/processDefinition/suspension-state-action.html -->
