--- a/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/called-process-definition-table.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/called-process-definition-table.html
@@ -1,4 +1,4 @@
-<!-- # CE - src/main/webapp/plugin/base/views/processDefinition/called-process-definition-table.html -->
+<!-- # CE - webapp/src/main/webapp/plugin/base/views/processDefinition/called-process-definition-table.html -->
 <table class="table table-bordered table-hover table-condensed">
   <thead>
     <th>Called Process Definition</th>
@@ -33,7 +33,7 @@
 
     <tr ng-if="!calledProcessDefinitions">
       <td colspan="2">
-        <i class="icon-loading"></i> loading called process definitions...
+        <i class="glyphicon glyphicon-loading"></i> loading called process definitions...
       </td>
     </tr>
 
@@ -45,4 +45,4 @@
 
   </tbody>
 </table>
-<!-- / CE - src/main/webapp/plugin/base/views/processDefinition/called-process-definition-table.html -->
+<!-- / CE - webapp/src/main/webapp/plugin/base/views/processDefinition/called-process-definition-table.html -->
