--- a/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/update-suspension-state-action.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/update-suspension-state-action.html
@@ -1,14 +1,14 @@
 <!-- # CE - src/main/webapp/plugin/base/app/views/processDefinition/update-suspension-state-action.html -->
-<a class="btn btn-toolbar btn-suspend-action" href ng-click="openDialog()"
+<a class="btn btn-default btn-toolbar btn-suspend-action" href ng-click="openDialog()"
    tooltip="Suspend Process Definition"
    tooltip-placement="left"
    ng-show="!processDefinition.suspended">
-  <i class="icon-suspended"></i>
+  <i class="glyphicon glyphicon-pause"></i>
 </a>
-<a class="btn btn-toolbar" href ng-click="openDialog()"
+<a class="btn btn-default btn-toolbar" href ng-click="openDialog()"
    tooltip="Activate Process Definition"
    tooltip-placement="left"
    ng-hide="!processDefinition.suspended">
-  <i class="icon-play"></i>
+  <i class="glyphicon glyphicon-play"></i>
 </a>
 <!-- / CE - src/main/webapp/plugin/base/app/views/processDefinition/update-suspension-state-action.html -->
