--- a/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/update-suspension-state-dialog.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/update-suspension-state-dialog.html
@@ -1,4 +1,4 @@
-<!-- # CE - src/main/webapp/plugin/base/app/views/processDefinition/update-suspension-state-dialog.html -->
+<!-- # CE - webapp/src/main/webapp/plugin/base/app/views/processDefinition/update-suspension-state-dialog.html -->
 <div class="modal-header">
   <h3 ng-show="processDefinition.suspended">Activate Process Definition</h3>
   <h3 ng-hide="processDefinition.suspended">Suspend Process Definition</h3>
@@ -21,22 +21,22 @@
 
     <form class="form-horizontal" name="updateSuspensionStateForm" novalidate request-aware ng-submit="updateSuspensionState()">
       <fieldset>
-        <div class="control-group">
+        <div class="form-group">
           <label class="control-label" for="includeInstancesValue">Include Instances
             <!-- activation -->
-            <span class="btn btn-small btn-link btn-control btn-control-link"
+            <span class="btn btn-sm btn-link btn-control btn-control-link"
                   tooltip="Including the process instances means that all existing process instances of this process definition will be activated too, if the value is set to true."
                   tooltip-placement="right"
                   ng-show="processDefinition.suspended">
-              <i class="icon-question-sign"></i>
+              <i class="glyphicon glyphicon-question-sign"></i>
             </span>
 
             <!-- suspension -->
-            <span class="btn btn-small btn-link btn-control btn-control-link"
+            <span class="btn btn-sm btn-link btn-control btn-control-link"
                   tooltip="Including the process instances means that all existing process instances of this process definition will be suspended too, if the value is set to true."
                   tooltip-placement="right"
                   ng-hide="processDefinition.suspended">
-              <i class="icon-question-sign"></i>
+              <i class="glyphicon glyphicon-question-sign"></i>
             </span>
           </label>
           <div class="controls">
@@ -44,19 +44,19 @@
           </div>
         </div>
 
-        <div class="control-group">
+        <div class="form-group">
           <label class="control-label" for="executeImmediately">Execute
-            <span class="btn btn-small btn-link btn-control btn-control-link"
+            <span class="btn btn-sm btn-link btn-control btn-control-link"
                   tooltip="Decide whether the activation of this process definition should be executed immediately or delayed. If the activation should happen delayed then an execution date must be provided on which the activation will be scheduled."
                   tooltip-placement="right"
                   ng-show="processDefinition.suspended">
-              <i class="icon-question-sign"></i>
+              <i class="glyphicon glyphicon-question-sign"></i>
             </span>
-            <span class="btn btn-small btn-link btn-control btn-control-link"
+            <span class="btn btn-sm btn-link btn-control btn-control-link"
                   tooltip="Decide whether the suspension of this process definition should be executed immediately or delayed. If the suspension should happen delayed then an execution date must be provided on which the suspension will be scheduled."
                   tooltip-placement="right"
                   ng-hide="processDefinition.suspended">
-              <i class="icon-question-sign"></i>
+              <i class="glyphicon glyphicon-question-sign"></i>
             </span>
           </label>
           <div class="controls">
@@ -141,4 +141,4 @@
   <button class="btn btn-primary" ng-click="close(status)"
           ng-show="status === 'SUCCESS' || status === 'FAIL'">OK</button>
 </div>
-<!-- / CE - src/main/webapp/plugin/base/app/views/processDefinition/update-suspension-state-dialog.html -->
+<!-- / CE - webapp/src/main/webapp/plugin/base/app/views/processDefinition/update-suspension-state-dialog.html -->
