--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/cancel-process-instance-action.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/cancel-process-instance-action.html
@@ -1,7 +1,7 @@
 <!-- # CE - src/main/webapp/plugin/base/app/views/processInstnace/cancel-process-instance-action.html -->
-<a class="btn btn-toolbar" href ng-click="openDialog()"
+<a class="btn btn-default btn-toolbar" href ng-click="openDialog()"
    tooltip="Cancel running process instance"
    tooltip-placement="left">
-  <i class="icon-remove-circle"></i>
+  <i class="glyphicon glyphicon-remove-circle"></i>
 </a>
 <!-- / CE - src/main/webapp/plugin/base/app/views/processInstnace/cancel-process-instance-action.html -->
