--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/update-suspension-state-action.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/update-suspension-state-action.html
@@ -1,14 +1,14 @@
-<!-- # CE - src/main/webapp/plugin/base/app/views/processInstance/update-suspension-state-action.html -->
-<a class="btn btn-toolbar btn-suspend-action" href ng-click="openDialog()"
+<!-- # CE - webapp/src/main/resources-plugin/base/app/views/processInstance/update-suspension-state-action.html -->
+<a class="btn btn-default btn-toolbar btn-suspend-action" href ng-click="openDialog()"
    tooltip="Suspend Process Instance"
    tooltip-placement="left"
    ng-show="!processInstance.suspended">
-  <i class="icon-suspended"></i>
+  <i class="glyphicon glyphicon-pause"></i>
 </a>
-<a class="btn btn-toolbar" href ng-click="openDialog()"
+<a class="btn btn-default btn-toolbar" href ng-click="openDialog()"
    tooltip="Activate Process Instance"
    tooltip-placement="left"
    ng-hide="!processInstance.suspended">
-  <i class="icon-play"></i>
+  <i class="glyphicon glyphicon-play"></i>
 </a>
-<!-- / CE - src/main/webapp/plugin/base/app/views/processInstance/update-suspension-state-action.html -->
+<!-- / CE - webapp/src/main/resources-plugin/base/app/views/processInstance/update-suspension-state-action.html -->
