--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/user-tasks-table.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/user-tasks-table.html
@@ -1,4 +1,4 @@
-<!-- # CE - src/main/webapp/plugin/app/base/views/processInstance/user-tasks-table.html -->
+<!-- # CE - webapp/src/main/resources-plugin/base/app/views/processInstance/user-tasks-table.html -->
 <table class="table table-bordered table-hover table-condensed">
   <thead>
     <tr>
@@ -54,10 +54,10 @@
       <td class="group">
         <a ng-click="changeGroups()"
            ng-model="userTask"
-           class="btn action-button"
+           class="btn btn-default action-button"
            tooltip-placement="left"
            tooltip="Manage group(s) for '{{ userTask.name || userTask.id }}'">
-          <i class="icon-user"></i>
+          <i class="glyphicon glyphicon-user"></i>
         </a>
       </td>
     </tr>
@@ -65,7 +65,7 @@
     <tr ng-if="!userTasks">
       <td class="tasks-loading"
           colspan="10">
-        <i class="icon-loading"></i> loading user tasks...
+        <i class="glyphicon glyphicon-loading"></i> loading user tasks...
       </td>
     </tr>
 
@@ -90,4 +90,4 @@
 
             max-size="7"
             boundary-links="true"></pagination>
-<!-- / CE - src/main/webapp/plugin/app/base/views/processInstance/user-tasks-table.html -->
+<!-- / CE - webapp/src/main/resources-plugin/base/app/views/processInstance/user-tasks-table.html -->
