--- a/client/webapp/src/main/resources-plugin/jobDefinition/app/views/processDefinition/job-definition-suspension-overlay.html
+++ b/client/webapp/src/main/resources-plugin/jobDefinition/app/views/processDefinition/job-definition-suspension-overlay.html
@@ -1,8 +1,8 @@
-<!-- # CE - ui/client/views/processDefinition/job-definition-suspension-overlay.html -->
-<span class="badge badge-warning badge-suspended activity-top-right-position"
+<!-- # CE - webapp/src/main/resources-plugin/jobDefinition/app/views/processDefinition/job-definition-suspension-overlay.html -->
+<span class="badge badge-warning activity-top-right-position"
       tooltip="Suspended Job Definition"
       tooltip-placement="top"
       ng-show="jobDefinition && jobDefinition.suspended">
-  <i class="icon-suspended white"></i>
+  <i class="glyphicon glyphicon-suspended"></i>
 </span>
-<!-- / CE - ui/client/views/processDefinition/job-definition-suspension-overlay.html -->
+<!-- / CE - webapp/src/main/resources-plugin/jobDefinition/app/views/processDefinition/job-definition-suspension-overlay.html -->
