--- a/client/client/scripts/templates/navigation.html
+++ b/client/client/scripts/templates/navigation.html
@@ -1,67 +1,65 @@
 <!-- # CE - camunda-cockpit-ui client/scripts/templates/navigation.html -->
-<div class="nav-collapse collapse"
-     ng-cloak>
-  <ul class="nav pull-right"
-      ng-controller="AuthenticationController">
+<ul ng-cloak
+    class="nav navbar-nav pull-right"
+    ng-controller="AuthenticationController">
 
-    <li engine-select></li>
+  <li engine-select></li>
 
-    <li class="dropdown"
+  <li class="dropdown"
+    cam-if-logged-in
+    ng-cloak>
+    <a href
+       sem-show-user-actions
+       class="dropdown-toggle"
+       data-toggle="dropdown">
+      <i class="glyphicon glyphicon-user "></i>
+      {{ authentication.name }}
+    </a>
+
+    <ul class="dropdown-menu dropdown-menu-right">
+      <li>
+        <a sem-jump-to-profile
+           ng-href="{{ '../../admin/:engine/#/users/' + authentication.name + '?tab=profile' | uri }}">
+          My Profile
+        </a>
+      </li>
+
+      <li class="divider"></li>
+
+      <li>
+        <a href
+           sem-log-out
+           ng-click="logout()">
+          Sign out
+        </a>
+      </li>
+    </ul>
+  </li>
+
+  <li class="divider-vertical"
       cam-if-logged-in
-      ng-cloak>
-      <a href
-         sem-show-user-actions
-         class="dropdown-toggle"
-         data-toggle="dropdown">
-        <i class="icon-user icon-white"></i>
-        {{ authentication.name }}
-      </a>
+      ng-cloak></li>
 
-      <ul class="dropdown-menu">
-        <li>
-          <a sem-jump-to-profile
-             ng-href="{{ '../../admin/:engine/#/users/' + authentication.name + '?tab=profile' | uri }}">
-            My Profile
-          </a>
-        </li>
+  <li class="app-switch dropdown">
+    <a href
+       sem-show-applications
+       class="dropdown-toggle"
+       data-toggle="dropdown">
+      <i class="glyphicon glyphicon-home "></i>
+      <b class="caret"></b>
+    </a>
 
-        <li class="divider"></li>
+    <ul class="dropdown-menu dropdown-menu-right">
+      <li ng-if="!authentication || authentication.canAccess('admin')">
+        <a sem-jump-to-admin
+           ng-href="{{ '../../admin/:engine/' | uri }}">Admin</a>
+      </li>
 
-        <li>
-          <a href
-             sem-log-out
-             ng-click="logout()">
-            Sign out
-          </a>
-        </li>
-      </ul>
-    </li>
-
-    <li class="divider-vertical"
-        cam-if-logged-in
-        ng-cloak></li>
-
-    <li class="app-switch dropdown">
-      <a href
-         sem-show-applications
-         class="dropdown-toggle"
-         data-toggle="dropdown">
-        <i class="icon-home icon-white"></i>
-        <b class="caret"></b>
-      </a>
-
-      <ul class="dropdown-menu">
-        <li ng-if="!authentication || authentication.canAccess('admin')">
-          <a sem-jump-to-admin
-             ng-href="{{ '../../admin/:engine/' | uri }}">Admin</a>
-        </li>
-
-        <li ng-if="!authentication || authentication.canAccess('tasklist')">
-          <a sem-jump-to-tasklist
-             ng-href="{{ '../../tasklist/:engine/' | uri }}">Tasklist</a>
-        </li>
-      </ul>
-    </li>
-  </ul>
-</div>
+      <li ng-if="!authentication || authentication.canAccess('tasklist')">
+        <a sem-jump-to-tasklist
+           ng-href="{{ '../../tasklist/:engine/' | uri }}">Tasklist</a>
+      </li>
+    </ul>
+  </li>
+</ul>
 <!-- / CE - camunda-cockpit-ui client/scripts/templates/navigation.html -->
