--- a/client/client/styles/app.less
+++ b/client/client/styles/app.less
@@ -1,18 +1,7 @@
-@import "_vars.less";
-
-/**
- * Logo styling
- */
-.navbar .brand {
-   // background-image: url('../../img/cockpit/app-logo.png');
-   background: no-repeat url(@logo-cockpit);
-   width: 220px;
-}
-
 .activity-highlight  {
-  -webkit-box-shadow: 0px 0px 4px 4px rgba(30, 144, 255, 1);
-  -moz-box-shadow: 0px 0px 4px 4px rgba(30, 144, 255, 1);
-  box-shadow: 0px 0px 4px 4px rgb(30, 144, 255);
+  -webkit-box-shadow: 0 0 4px 4px rgba(30, 144, 255, 1);
+  -moz-box-shadow: 0 0 4px 4px rgba(30, 144, 255, 1);
+  box-shadow: 0 0 4px 4px rgb(30, 144, 255);
   border-radius: 5px;
 
   cursor: pointer;
@@ -620,9 +609,9 @@ textarea.variable-type-string {
 .instance-tree {
   * {
     display: block;
-    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-       -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-            box-sizing: border-box;         /* Opera/IE 8+ */
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
   }
 
   a {
@@ -697,9 +686,9 @@ textarea.variable-type-string {
     }
 
     &.selected {
-      -webkit-box-shadow: 0px 0px 2px 2px rgba(30, 144, 255, 1);
-         -moz-box-shadow: 0px 0px 2px 2px rgba(30, 144, 255, 1);
-              box-shadow: 0px 0px 2px 2px rgb(30, 144, 255);
+      -webkit-box-shadow: 0 0 2px 2px rgb(30, 144, 255);
+         -moz-box-shadow: 0 0 2px 2px rgb(30, 144, 255);
+              box-shadow: 0 0 2px 2px rgb(30, 144, 255);
 
       background: #D5E8FF;
 
@@ -815,9 +804,9 @@ textarea.variable-type-string {
 
 select.ng-invalid.ng-invalid-date-type-equal {
   border-color: #E9322D;
-  box-shadow: 0 0 6px #F8B9B7;
-  -webkit-box-shadow: 0 0 6px #F8B9B7;
-  -moz-box-shadow: 0 0 6px #f8b9b7;
+  -webkit-box-shadow: 0 0 6px #f8b9b7;
+     -moz-box-shadow: 0 0 6px #f8b9b7;
+          box-shadow: 0 0 6px #f8b9b7;
 }
 
 
