--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -1,13 +1,7 @@
-@import "../bower_components/bootstrap/less/variables.less";
+// @import "./bootstrap.patched.less";
+
 @import "_vars.less";
-
-@import "../bower_components/bootstrap/less/mixins.less";
-
-@import "./bootstrap.patched.less";
-@import "./bootstrap-responsive.less";
 
 @import "../../node_modules/camunda-commons-ui/resources/less/common.less";
 
 @import "app.less";
-
-
