refactor(templates): correct the file paths and update attributes
Related to: CAM-3270

--- a/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/process-instance-table.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/process-instance-table.html
@@ -1,5 +1,5 @@
-<!-- # CE - src/main/webapp/plugin/base/views/processDefinition/process-instance-table.html -->
-<table class="table table-bordered table-hover table-condensed table-filter">
+<!-- # CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processDefinition/process-instance-table.html -->
+<table class="table table-striped table-hover table-condensed table-filter">
   <thead>
     <tr>
       <th>ID</th>
@@ -56,4 +56,4 @@
 
             max-size="7"
             boundary-links="true"></pagination>
-<!-- / CE - src/main/webapp/plugin/base/views/processDefinition/process-instance-table.html -->
+<!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processDefinition/process-instance-table.html -->
