--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/called-process-instance-table.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/called-process-instance-table.html
@@ -1,5 +1,5 @@
-<!-- # CE - webapp/src/main/webapp/plugin/base/app/views/processInstnace/called-process-instance-table.html -->
-<table class="table table-bordered table-hover table-condensed">
+<!-- # CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/called-process-instance-table.html -->
+<table class="table table-striped table-hover table-condensed">
   <thead>
     <th>Called Process Instance</th>
     <th>Process Definition</th>
@@ -39,4 +39,4 @@
 
   </tbody>
 </table>
-<!-- / CE - webapp/src/main/webapp/plugin/base/app/views/processInstnace/called-process-instance-table.html -->
+<!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/called-process-instance-table.html -->
