--- a/client/webapp/src/main/resources-plugin/base/app/views/dashboard/process-definition-list.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/dashboard/process-definition-list.html
@@ -1,10 +1,10 @@
-<!-- # CE - src/main/webapp/plugin/base/app/views/dashboard/process-definition-list.html -->
+<!-- # CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/dashboard/process-definition-list.html -->
 <div>
   <div class="page-header">
     <h1>Deployed Processes (List)</h1>
   </div>
 
-  <table class="table table-bordered table-hover table-condensed">
+  <table class="table table-striped table-hover table-condensed">
     <thead>
       <tr>
         <th>Name</th>
@@ -39,4 +39,4 @@
     </tbody>
   </table>
 </div>
-<!-- / CE - src/main/webapp/plugin/base/app/views/dashboard/process-definition-list.html -->
+<!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/dashboard/process-definition-list.html -->
