--- a/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/called-process-definition-table.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processDefinition/called-process-definition-table.html
@@ -1,5 +1,5 @@
-<!-- # CE - webapp/src/main/webapp/plugin/base/views/processDefinition/called-process-definition-table.html -->
-<table class="table table-bordered table-hover table-condensed">
+<!-- # CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processDefinition/called-process-definition-table.html -->
+<table class="table table-striped table-hover table-condensed">
   <thead>
     <th>Called Process Definition</th>
     <th>Activity</th>
@@ -45,4 +45,4 @@
 
   </tbody>
 </table>
-<!-- / CE - webapp/src/main/webapp/plugin/base/views/processDefinition/called-process-definition-table.html -->
+<!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processDefinition/called-process-definition-table.html -->
