--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/add-variable-action.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/add-variable-action.html
@@ -1,7 +1,9 @@
-<!-- # CE - src/main/webapp/plugin/base/app/views/processInstnace/add-variable-action.html -->
-<a class="btn btn-default btn-toolbar" href ng-click="openDialog()"
+<!-- # CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstnace/add-variable-action.html -->
+<a class="btn btn-default btn-toolbar"
+   href
+   ng-click="openDialog()"
    tooltip="Add a new variable to Process Instance"
    tooltip-placement="left">
   <i class="glyphicon glyphicon-plus"></i>
 </a>
-<!-- / CE - src/main/webapp/plugin/base/app/views/processInstnace/add-variable-action.html -->
+<!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstnace/add-variable-action.html -->
