--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/add-variable-dialog.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/add-variable-dialog.html
@@ -1,4 +1,4 @@
-<!-- # CE - src/main/webapp/plugin/base/app/views/processInstnace/add-varible-dialog.html -->
+<!-- # CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstnace/add-varible-dialog.html -->
 <div class="modal-header">
   <h3>Add Variable to Process Instance</h3>
 </div>
@@ -6,36 +6,57 @@
 <div class="modal-body">
   <div notifications-panel></div>
 
-  <form class="form-horizontal" name="addVariableForm" novalidate ng-submit="save()" ng-hide="status === 'SUCCESS' || status === 'FAIL'" request-aware>
+  <form class="form-horizontal"
+        name="addVariableForm"
+        novalidate
+        ng-submit="save()"
+        ng-hide="status === 'SUCCESS' || status === 'FAIL'"
+        request-aware>
     <fieldset>
 
       <div class="form-group">
-        <label class="control-label" for="variableName">Variable Name*</label>
+        <label class="control-label"
+               for="variableName">Variable Name*</label>
         <div class="controls">
-          <input id="variableNameId" name="variableName" type="text" ng-model="newVariable.name" autofocus required>
+          <input id="variableNameId"
+                 name="variableName"
+                 class="form-control"
+                 type="text"
+                 ng-model="newVariable.name"
+                 autofocus
+                 required />
         </div>
       </div>
 
       <div class="form-group">
-        <label class="control-label" for="variableType">Variable Type*</label>
+        <label class="control-label"
+               for="variableType">Variable Type*</label>
         <div class="controls">
-          <select id="variableTypeId" name="variableType" ng-options="variableType for variableType in variableTypes" ng-model="newVariable.type" ng-change="changeVariableType(variableType)">
+          <select id="variableTypeId"
+                  name="variableType"
+                  class="form-control"
+                  ng-options="variableType for variableType in variableTypes"
+                  ng-model="newVariable.type"
+                  ng-change="changeVariableType(variableType)">
           </select>
         </div>
       </div>
 
       <div class="form-group">
-        <label class="control-label" for="variableValue">Variable Value*</label>
+        <label class="control-label"
+               for="variableValue">Variable Value*</label>
         <div class="controls">
           <div variable="newVariable"></div>
 
-          <p class="invalid" ng-show="this.addVariableForm.editDateValue.$error.date">
+          <p class="invalid"
+             ng-show="this.addVariableForm.editDateValue.$error.date">
             Supported pattern 'yyyy-MM-ddTHH:mm:ss'.
           </p>
-          <p class="invalid" ng-show="this.addVariableForm.editIntegerValue.$error.numeric || this.addVariableForm.editFloatValue.$error.numeric">
+
+          <p class="invalid"
+             ng-show="this.addVariableForm.editIntegerValue.$error.numeric || this.addVariableForm.editFloatValue.$error.numeric">
             Only a {{ newVariable.type }} value is allowed.
           </p>
-
         </div>
       </div>
 
@@ -51,16 +72,21 @@
   </div>
 
 </div>
+
 <div class="modal-footer">
-  <button class="btn" ng-click="close()"
+  <button class="btn btn-link"
+          ng-click="close()"
           ng-disabled="status === 'PERFORM_SAVE'"
           ng-hide="status === 'SUCCESS' || status === 'FAIL'">Close</button>
 
-  <button type="submit" class="btn btn-primary" ng-click="save()"
+  <button type="submit"
+          class="btn btn-primary"
+          ng-click="save()"
           ng-hide="status === 'SUCCESS' || status === 'FAIL'"
           ng-disabled="!isValid()">Add</button>
 
-  <button class="btn btn-primary" ng-click="close()"
+  <button class="btn btn-primary"
+          ng-click="close()"
           ng-show="status === 'SUCCESS' || status === 'FAIL'">OK</button>
 </div>
-<!-- / CE - src/main/webapp/plugin/base/app/views/processInstnace/add-varible-dialog.html -->
+<!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstnace/add-varible-dialog.html -->
