--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/cancel-process-instance-action.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/cancel-process-instance-action.html
@@ -1,7 +1,9 @@
-<!-- # CE - src/main/webapp/plugin/base/app/views/processInstnace/cancel-process-instance-action.html -->
-<a class="btn btn-default btn-toolbar" href ng-click="openDialog()"
+<!-- # CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstnace/cancel-process-instance-action.html -->
+<a class="btn btn-default btn-toolbar"
+   href
+   ng-click="openDialog()"
    tooltip="Cancel running process instance"
    tooltip-placement="left">
   <i class="glyphicon glyphicon-remove-circle"></i>
 </a>
-<!-- / CE - src/main/webapp/plugin/base/app/views/processInstnace/cancel-process-instance-action.html -->
+<!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstnace/cancel-process-instance-action.html -->
