--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/cancel-process-instance-dialog.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/cancel-process-instance-dialog.html
@@ -1,4 +1,4 @@
-<!-- # CE - src/main/webapp/plugin/base/app/views/processInstnace/cancel-process-instance-dialog.html -->
+<!-- # CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstnace/cancel-process-instance-dialog.html -->
 <div class="modal-header">
   <h3>Cancel Process Instance</h3>
 </div>
@@ -20,7 +20,7 @@
       <p>
         If you cancel this process instance the following sub process instances will also be canceled:
       </p>
-      <table class="table table-bordered table-condensed">
+      <table class="table table-striped table-condensed">
         <thead>
           <tr><th>ID</th></tr>
         </thead>
@@ -66,4 +66,4 @@
           ng-disabled="status !== 'beforeCancellation'"
           ng-hide="status === 'cancellationSuccess' || status === 'cancellationFailed' || status === 'loadingFailed'">Cancel Process Instance</button>
 </div>
-<!-- / CE - src/main/webapp/plugin/base/app/views/processInstnace/cancel-process-instance-dialog.html -->
+<!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstnace/cancel-process-instance-dialog.html -->
