--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/incidents-tab.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/incidents-tab.html
@@ -1,5 +1,5 @@
-<!-- # CE - webapp/src/main/resources-plugin/base/app/views/processInstance/incidents-tab.html -->
-<table class="table table-bordered table-hover table-condensed">
+<!-- # CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/incidents-tab.html -->
+<table class="table table-striped table-hover table-condensed">
   <thead>
     <tr>
       <th>Message</th>
@@ -105,4 +105,4 @@
 
             max-size="7"
             boundary-links="true"></pagination>
-<!-- / CE - webapp/src/main/resources-plugin/base/app/views/processInstance/incidents-tab.html -->
+<!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/incidents-tab.html -->
