--- a/client/webapp/src/main/resources-plugin/base/app/views/processInstance/user-tasks-table.html
+++ b/client/webapp/src/main/resources-plugin/base/app/views/processInstance/user-tasks-table.html
@@ -1,5 +1,5 @@
-<!-- # CE - webapp/src/main/resources-plugin/base/app/views/processInstance/user-tasks-table.html -->
-<table class="table table-bordered table-hover table-condensed">
+<!-- # CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/user-tasks-table.html -->
+<table class="table table-striped table-hover table-condensed">
   <thead>
     <tr>
       <th>Activity</th>
@@ -90,4 +90,4 @@
 
             max-size="7"
             boundary-links="true"></pagination>
-<!-- / CE - webapp/src/main/resources-plugin/base/app/views/processInstance/user-tasks-table.html -->
+<!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/base/app/views/processInstance/user-tasks-table.html -->
