--- a/client/webapp/src/main/resources-plugin/jobDefinition/app/views/processDefinition/job-definition-table.html
+++ b/client/webapp/src/main/resources-plugin/jobDefinition/app/views/processDefinition/job-definition-table.html
@@ -1,5 +1,5 @@
-<!-- # CE - ui/client/views/processDefinition/job-definition-table.html -->
-<table class="table table-bordered table-hover table-condensed table-filter">
+<!-- # CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/jobDefinition/app/views/processDefinition/job-definition-table.html -->
+<table class="table table-striped table-hover table-condensed table-filter">
   <thead>
     <tr>
       <th>Activity</th>
@@ -52,4 +52,4 @@
 
   </tbody>
 </table>
-<!-- / CE - ui/client/views/processDefinition/job-definition-table.html -->
+<!-- / CE - camunda-bpm-webapp/webapp/src/main/resources-plugin/jobDefinition/app/views/processDefinition/job-definition-table.html -->
